[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-sub2api"
version = "1.0.1"
description = "ComfyUI custom node for sub2api multimodal text, image generation, and image editing workflows."
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["dependencies"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/JioJe/comfyui-sub2api"
Documentation = "https://github.com/JioJe/comfyui-sub2api#readme"
"Bug Tracker" = "https://github.com/JioJe/comfyui-sub2api/issues"

[tool.comfy]
PublisherId = "maque"
DisplayName = "sub2api"
requires-comfyui = ">=1.0.0"
